
   * Fully consistent API (defined and correct return values)

   * Complete GLUT independence (internal character sets)

   * Basic building support for biological polymers & small molecules
     with and w/o hydrogens

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems, etc).
     sometimes it just fails period

Changes up to 0.84

   * added "safe" option to zoom command in order to provide a mode
     which will guarantee against clipping

   * updated SPHEROID command for use with trajectories

   * Can now read AMBER topology, coordinate, trajectory, and restart files

   * PyMOL now transforms 4-character atom names appropriately by default.
     Thus, 3HG2 in PDB file becomes an atom named "HG23"
     If you don't like this, "set pdb_literal_names=1".

   * PyMOL now preserves stereo field on MOL-files to better enable
     shuttling of 2D structures through PyMOL...

   * fixed bug with dumping of dot surfaces...

   * fixed bug reading element identifer from PDB files

   * fixed bug with alternate conformations

Changes up to 0.83

   * various tweaks to the semistatic minimal dependencies build...

   * fixed bug in startup file reading

   * first inclusion of cex file support

Changes up to 0.82

   * WARNING: default behavior of isomesh and isosurf changed!  By default, they
     will now always load the mesh into state 1.  If you need the previous behavior,
     then set the state argument to zero.

Changes up to 0.82

   * modified "cmd.system" to take an argument for asynchronous execution

   * flag command no longer indicates atoms by default -- set "auto_indicate_flags"

   * cross-eye side-by-side stereo support

   * fixed bug in valency display code

   * fixed major bug in "create"

   * raytracing bugfix for bond with zero length

   * complicated workaround for mouse atom selections with Radeon 8500 and WinXP
     PyMOL may now be somewhat resistant to broken OpenGL ReadPixels implementations 
