@@ -340,8 +340,11 @@ void ObjectSurfaceStateInit(ObjectSurfaceState *ms)
   }
   if(!ms->N) {
     ms->N = VLAlloc(int,10000);
-
   }
+  if(ms->AtomVertex) {
+    VLAFreeP(ms->AtomVertex);
+  }
+
   ms->N[0]=0;
   ms->Active=true;
   ms->ResurfaceFlag=true;
