@@ -1,0 +1,88 @@
+ATOM      1  C1*   C R  15      10.008 105.097  36.379  0.40 74.24           C
+ATOM      2  N1    C R  15       9.141 106.015  37.152  0.40 73.89           N
+ATOM      3  C2    C R  15       9.536 106.379  38.459  0.40 73.58           C
+ATOM      4  O2    C R  15      10.604 105.933  38.919  0.40 73.48           O
+ATOM      5  N3    C R  15       8.744 107.205  39.183  0.40 73.07           N
+ATOM      6  C4    C R  15       7.605 107.669  38.658  0.40 72.85           C
+ATOM      7  N4    C R  15       6.855 108.476  39.414  0.40 72.52           N
+ATOM      8  C5    C R  15       7.185 107.325  37.336  0.40 72.90           C
+ATOM      9  C6    C R  15       7.974 106.504  36.626  0.40 73.29           C
+ATOM     10  C2*   C R  15       9.844 103.632  36.796  0.40 74.52           C
+ATOM     11  O2*   C R  15      11.102 102.987  36.749  0.40 73.85           O
+ATOM     12  C3*   C R  15       8.859 103.129  35.744  0.40 74.75           C
+ATOM     13  O3*   C R  15       8.939 101.710  35.598  0.40 75.29           O
+ATOM     14  C4*   C R  15       9.317 103.871  34.495  0.40 74.50           C
+ATOM     15  O4*   C R  15       9.687 105.188  34.994  0.40 74.50           O
+ATOM     16  C5*   C R  15       8.326 104.006  33.349  0.40 74.16           C
+ATOM     17  O5*   C R  15       7.150 104.710  33.763  0.40 73.65           O
+ATOM     18  C1*   A R  16      10.023 102.371  41.238  0.40 72.71           C
+ATOM     19  N1    A R  16       7.125 105.999  43.474  0.40 70.44           N
+ATOM     20  C2    A R  16       8.182 105.297  43.907  0.40 70.63           C
+ATOM     21  N3    A R  16       8.896 104.366  43.271  0.40 70.83           N
+ATOM     22  C4    A R  16       8.419 104.170  42.027  0.40 71.45           C
+ATOM     23  C5    A R  16       7.342 104.815  41.440  0.40 71.03           C
+ATOM     24  C6    A R  16       6.671 105.777  42.221  0.40 70.46           C
+ATOM     25  N6    A R  16       5.618 106.474  41.789  0.40 69.84           N
+ATOM     26  N7    A R  16       7.138 104.354  40.145  0.40 71.14           N
+ATOM     27  C8    A R  16       8.079 103.454  39.979  0.40 71.55           C
+ATOM     28  N9    A R  16       8.891 103.289  41.080  0.40 72.01           N
+ATOM     29  C2*   A R  16       9.647 101.084  41.979  0.40 73.25           C
+ATOM     30  O2*   A R  16      10.761 100.629  42.725  0.40 72.68           O
+ATOM     31  C3*   A R  16       9.289 100.166  40.817  0.40 73.83           C
+ATOM     32  O3*   A R  16       9.372  98.781  41.163  0.40 74.68           O
+ATOM     33  C4*   A R  16      10.323 100.559  39.768  0.40 73.56           C
+ATOM     34  O4*   A R  16      10.480 101.995  39.945  0.40 73.14           O
+ATOM     35  C5*   A R  16       9.949 100.275  38.330  0.40 73.83           C
+ATOM     36  O5*   A R  16       8.713 100.913  38.003  0.40 74.87           O
+ATOM     37  O1P   A R  16       8.258  99.345  36.102  0.40 75.27           O
+ATOM     38  O2P   A R  16       6.680 101.320  36.612  0.40 75.17           O
+ATOM     39  P     A R  16       8.059 100.752  36.556  0.40 75.88           P
+ATOM     40  C1'   U R  17       7.575 101.665  45.453  0.40 74.04           C
+ATOM     41  N1    U R  17       6.594 102.106  44.444  0.40 73.86           N
+ATOM     42  C2    U R  17       5.684 103.099  44.806  0.40 73.75           C
+ATOM     43  O2    U R  17       5.665 103.619  45.915  0.40 73.35           O
+ATOM     44  N3    U R  17       4.796 103.459  43.819  0.40 73.80           N
+ATOM     45  C4    U R  17       4.721 102.945  42.535  0.40 73.54           C
+ATOM     46  O4    U R  17       3.872 103.384  41.754  0.40 72.72           O
+ATOM     47  C5    U R  17       5.690 101.928  42.240  0.40 73.61           C
+ATOM     48  C6    U R  17       6.570 101.555  43.177  0.40 73.53           C
+ATOM     49  C2'   U R  17       6.963 100.794  46.555  0.40 74.28           C
+ATOM     50  O2'   U R  17       7.647 101.018  47.773  0.40 73.48           O
+ATOM     51  C3'   U R  17       7.192  99.399  45.990  0.40 74.60           C
+ATOM     52  O3'   U R  17       7.173  98.388  46.997  0.40 75.46           O
+ATOM     53  C4'   U R  17       8.561  99.531  45.338  0.40 74.43           C
+ATOM     54  O4'   U R  17       8.572 100.885  44.805  0.40 74.22           O
+ATOM     55  C5'   U R  17       8.846  98.555  44.218  0.40 74.20           C
+ATOM     56  O5'   U R  17       7.855  98.672  43.195  0.40 74.42           O
+ATOM     57  O1P   U R  17       8.427  96.582  41.940  0.40 74.16           O
+ATOM     58  O2P   U R  17       6.909  98.386  40.900  0.40 74.43           O
+ATOM     59  P     U R  17       8.075  98.019  41.755  0.40 75.01           P
+ATOM     60  C1'   G R  18       2.663 101.808  48.702  0.40 72.66           C
+ATOM     61  N1    G R  18       0.484 104.266  44.824  0.40 70.97           N
+ATOM     62  C2    G R  18       0.332 104.459  46.177  0.40 70.76           C
+ATOM     63  N2    G R  18      -0.508 105.437  46.546  0.40 69.98           N
+ATOM     64  N3    G R  18       0.957 103.746  47.101  0.40 71.04           N
+ATOM     65  C4    G R  18       1.763 102.805  46.555  0.40 71.64           C
+ATOM     66  C5    G R  18       1.984 102.529  45.220  0.40 71.51           C
+ATOM     67  C6    G R  18       1.305 103.304  44.239  0.40 71.37           C
+ATOM     68  O6    G R  18       1.368 103.212  43.006  0.40 71.36           O
+ATOM     69  N7    G R  18       2.884 101.481  45.076  0.40 71.25           N
+ATOM     70  C8    G R  18       3.190 101.144  46.300  0.40 71.67           C
+ATOM     71  N9    G R  18       2.545 101.910  47.249  0.40 72.19           N
+ATOM     72  C2'   G R  18       1.655 100.841  49.335  0.40 72.91           C
+ATOM     73  O2'   G R  18       1.259 101.321  50.607  0.40 72.21           O
+ATOM     74  C3'   G R  18       2.477  99.560  49.407  0.40 73.05           C
+ATOM     75  O3'   G R  18       2.004  98.564  50.324  0.40 72.65           O
+ATOM     76  C4'   G R  18       3.867 100.080  49.741  0.40 73.24           C
+ATOM     77  O4'   G R  18       3.966 101.335  49.015  0.40 72.98           O
+ATOM     78  C5'   G R  18       5.007  99.173  49.340  0.40 74.03           C
+ATOM     79  O5'   G R  18       4.871  98.782  47.972  0.40 75.14           O
+ATOM     80  O1P   G R  18       6.064  96.615  48.404  0.40 75.62           O
+ATOM     81  O2P   G R  18       5.177  97.205  46.053  0.40 75.77           O
+ATOM     82  P     G R  18       5.789  97.635  47.347  0.40 76.48           P
+TER      83        G R  18 
+HETATM   84  O   HOH Y   5      -1.454 100.701  55.776  1.00 48.82           O
+HETATM   85  Na+ HOH Y  17      -1.727 100.737  52.887  1.00 45.37           O
+HETATM   86  Na+ HOH Y  51      -2.859 102.206  50.632  1.00 34.62           O
+HETATM   87  Cl- HOH Y  52      -5.396 101.684  49.963  1.00 30.84           O
+END
