@@ -1,0 +1,54 @@
+PyMOL>load dat/names.pdb
+ Executive: object "names" created.
+PyMOL>select test,name O4'
+ Selector: selection "test" defined with 2 atoms.
+PyMOL>select test,*/O4'
+ Selector: selection "test" defined with 2 atoms.
+PyMOL>select test,*/O4'+O3'
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,(*/O4',O3')
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,name O4'+O3'
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,name "O4'+O3'"
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,name O4'+Na+
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,(name Na+,O4')
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,name Na++O4'
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,*/Na++O4'
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,*/O4'+O4
+ Selector: selection "test" defined with 3 atoms.
+PyMOL>select test,*/O2*+O2
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,*/O2*+O2'
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,name 'O4''
+ Selector: selection "test" defined with 2 atoms.
+PyMOL>select test,name "O4'"+O2'
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,name 'O4''+O2'
+ Selector: selection "test" defined with 4 atoms.
+PyMOL>select test,name O4'+C2+C4+Na++Cl-
+ Selector: selection "test" defined with 13 atoms.
+PyMOL>select test,*/O4'+C2+C4+Na++Cl-
+ Selector: selection "test" defined with 13 atoms.
+PyMOL>select test,names////O4'
+ Selector: selection "test" defined with 2 atoms.
+PyMOL>select test,names and */O4'+'Na+'+'C2'+'C4'
+ Selector: selection "test" defined with 12 atoms.
+PyMOL>select test,chain ''
+ Selector: no atoms selected.
+PyMOL>select test,segi ''
+ Selector: selection "test" defined with 86 atoms.
+PyMOL>select test,chain R+''
+ Selector: selection "test" defined with 82 atoms.
+PyMOL>select test,chain ''+R
+ Selector: selection "test" defined with 82 atoms.
+PyMOL>select test,name Na+
+ Selector: selection "test" defined with 2 atoms.
+PyMOL>select test,name "Na+"
+ Selector: selection "test" defined with 2 atoms.
